--- a/caykimnho_studio/Views/Home/_productQuickView.cshtml
+++ b/caykimnho_studio/Views/Home/_productQuickView.cshtml
@@ -95,7 +95,7 @@
 
                         <div class="variant_quantity_btn d-flex">
                             <div class="pro-qty border">
-                                <input id="soluongsanpham" min="1" max="100" type="number" value="1">
+                                <input id="soluongsanpham" min="1" max="100" type="text" value="1">
                             </div>
                             <button id="addgiohang" name="@Model.ID" class="button btn btn-primary"><i class="ion-android-add"></i> Thêm Vào Giỏ hàng</button>
                             <a data-tippy="Thêm vào yêu thích" class="wishlist"><i class="ion-ios-heart"></i></a>
